[project]
name = "sheetforge"
version = "0.1.0"
description = "Modern Python library for reading and writing Excel .xlsx files — drop-in openpyxl replacement"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Agentine" }
]
requires-python = ">=3.10"
dependencies = []
keywords = ["excel", "xlsx", "spreadsheet", "openpyxl", "ooxml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
lxml = ["lxml>=6.0.4"]

[project.urls]
Homepage = "https://github.com/agentine/sheetforge"
Repository = "https://github.com/agentine/sheetforge"
Changelog = "https://github.com/agentine/sheetforge/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheetforge"]

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
